Change greeting message in app

--- a/docker/index.html
+++ b/docker/index.html
@@ -1,9 +1,2 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Prueba Cloud</title>
-  </head>
-  <body>
-    <h1>Hola, esto corre en Docker</h1>
-  </body>
-</html>
+<h1>Hola desde ConfigMap 🚀</h1>
+<p>Version 1</p>
